# simple-3d

./: Cargo.toml  README.md  bootstrap.js  flake.nix  index.html
demo/: cli.mkv  wasm.mkv
simple-3d-cli/: Cargo.toml
simple-3d-cli/src/: interface.rs  main.rs
simple-3d-core/: Cargo.toml
simple-3d-core/src/: lib.rs  loader.rs  rasterize.rs  transform.rs  transformations.rs
simple-3d-core/src/static/: shapes.rs
simple-3d-core/src/types/: keys.rs  matrix.rs  mesh.rs  mod.rs  pixel.rs  screen.rs  textures.rs  triangle.rs  vector.rs  vertex.rs
simple-3d-wasm/: Cargo.toml  bootstrap.js  index.html
simple-3d-wasm/src/: interface.rs  lib.rs  wasm.rs
src/: drawing.rs  lib.rs  matrix.rs  rasterize.rs  rasterizing.rs  rendering.rs  shapes.rs  transformations.rs  types2d.rs  types3d.rs  vectors.rs  wasm.rs
src/static/: mod.rs  shapes.rs  transformations.rs
src/types/: camera.rs  mesh.rs  mod.rs  scene.rs  screen.rs  textures.rs  vector.rs  vertex.rs
